# douyin-OCR

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  已损坏修复
.github/workflows/: release.yml
app/: index.html
app/src/: main.ts  styles.css
examples/: export_csv.rs
src/: export.rs  lib.rs  ocr.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
