[package]
name = "whwjm-ocr"
version = "2.0.2"
edition = "2024"
description = "抖音登记OCR"

[package.metadata.bundle]
name = "抖音登记OCR"
identifier = "douyinocr.trih.topgamers.cn"
icon = ["ocr-logo.png"]

[features]
default = []
slint-gui = ["dep:rfd", "dep:slint", "dep:webbrowser"]

[[bin]]
name = "export_gui"
path = "src/bin/export_gui.rs"
required-features = ["slint-gui"]

[dependencies]
anyhow = "1"
image = "0.25"
ocr-rs = "2.3.x"
rfd = { version = "0.17.2", optional = true }
slint = { version = "1.16.1", optional = true }
ureq = "3.3"
webbrowser = { version = "1.2", optional = true }
