[package]
name = "douyin-ocr-tauri"
version = "2.0.0"
edition = "2024"

[lib]
name = "douyin_ocr_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
whwjm-ocr = { path = ".." }
